# bifnom_rust

./: .gitignore  Cargo.toml  results_summary.txt  results_summary_filter.txt
Input_armadillo/: param.txt
results/: RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_0  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_1  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_10  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_100  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_101  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_102  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_103  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_104  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_105  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_106  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_107  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_108  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_109  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_11  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_110  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_111  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_112  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_113  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_114  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_115  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_116  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_117  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_118  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_119  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_12  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_120  RIFNOM_TAVE015_TVAR005_TANG025_TDIFF12_TTRACK6_121  (+4345 more)
(+759 files in other folders)
