[package]
name = "bifnom"
version = "0.1.0"
authors = ["Odagawa <38175513+bababax11@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-linalg = "0.13.0"
regex = "1.4.3"
once_cell = "1.5.2"
proconio = "0.4.1"
