[package]
name = "bifnom"
version = "0.1.0"
authors = ["Odagawa <38175513+bababax11@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
cgmath = "0.18.0"
regex = "1.4.3"
once_cell = "1.5.2"
proconio = "0.4.1"
itertools = "0.10.0"
prgrs = "0.6.4"

[profile.dev]
opt-level = 3
debug = true
overflow-checks = false

[profile.release]
opt-level = 3
debug = true
lto = true
overflow-checks = false
