[package]
authors = ["Odagawa <38175513+bababax11@users.noreply.github.com>"]
edition = "2018"
name = "bifnom"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
itertools = "0.10.0"
ndarray = "0.14.0"
num-traits = "0.2"
once_cell = "1.5.2"
prgrs = "0.6.4"
proconio = { version = "0.4.1", features = ["derive"] }
regex = "1.4.3"
statistical = "1.0.0"

[profile.dev]
debug = true
opt-level = 3
overflow-checks = false

[profile.release]
debug = true
lto = true
opt-level = 3
overflow-checks = false
